aggiunto layout desktop

--- a/index.html
+++ b/index.html
@@ -11,7 +11,72 @@
   <title>Resp wannabe</title>
 </head>
 <body>
-  <main>
+  <main class="">
+    <!-- sezione 1/top -->
+    <div class="container">
+      <h2>Lezioni dove vuoi tu</h2>
+      <div class="col-lg-6 space">
+        <img class="img-general" src="img/icon/maps.png" alt="">
+        <h3>A casa tua</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+
+      <div class="col-lg-6 space">
+        <img class="img-general" src="img/icon/screen.png" alt="">
+        <h3>Online</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+    </div>
+
+    <!-- sezione 2 -->
+    <div class="container">
+      <h2>Come funziona</h2>
+      <div class="col-lg-4 space">
+        <img class="img-general" src="img/search.svg" alt="">
+        <h3>Cerca</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+      </div>
+      <div class="col-lg-4 space">
+        <img class="img-general" src="img/letter.svg" alt="">
+        <h3>Contatta</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+      </div>
+      <div class="col-lg-4 space">
+        <img class="img-general" src="img/male.svg" alt="">
+        <h3>Inizia a suonare</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+    </div>
+
+    <!-- sezione3 -->
+    <div class="container">
+      <h2>Perchè Cademi</h2>
+      <div class="col-lg-12">
+        <img class="img-foot" src="img/icon/profile.png" alt="">
+        <h3>La piu grande scuola d'Italia</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <hr>
+      </div>
+    </div>
+    <div class="container">
+      <div class="col-lg-12">
+        <img class="img-foot" src="img/icon/secure.png" alt="">
+        <h3>Soddisfazione garantita</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <hr>
+      </div>
+    </div>
+    <div class="container">
+      <div class="col-lg-12">
+        <img class="img-foot" src="img/icon/flex.png" alt="">
+        <h3>Flessibile e conveniente</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <hr>
+      </div>
+    </div>
+
 
   </main>
 </body>
